Bug 81795 - UI: click on status bar language brings user to wrong dialogue tab
Summary: UI: click on status bar language brings user to wrong dialogue tab
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.3 rc
Hardware: All All
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-26 21:22 UTC by immanuelg
Modified: 2014-08-11 16:00 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description immanuelg 2014-07-26 21:22:30 UTC
When I do this:
Click on status bar {language} - More

It brings you to the last used tab in the "Character" dialogue box.


I expect
The "font" tab.
Comment 1 Michael Meeks 2014-07-26 21:33:42 UTC
Some rough code pointers:
      <menu:menu menu:id=".uno:LanguageMenu">
        <menu:menupopup>
          <menu:menuitem menu:id=".uno:SetLanguageSelectionMen

framework/source/uielement/langselectionmenucontroller.cxx

    // entry for opening the Format/Character dialog
    ++nItemId;
    pPopupMenu->InsertItem( nItemId, FwlResId(STR_LANGSTATUS_MORE).toString());
    pPopupMenu->SetItemCommand( nItemId, aCmd_Dialog );
Comment 2 Commit Notification 2014-08-11 15:57:48 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3ac80237f310366afef0f7b6c427889d652bd369

Resolves: fdo#81795 open the font tab via More... languages



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.