Resolves: fdo#81795 open the font tab via More... languages

a) FontDialog doesn't take a Language argument, so drop that
b) Give FontDialog a Page argument and set it to "font" when
   called from the status bar More... menu entry

Change-Id: Ibaf4d5e51d47794b8b0e3c3e06a6d8e00a7d2896